--- a/index.html
+++ b/index.html
@@ -8,21 +8,49 @@
 <body>
   <div class="share-icon">
     <div class="shares">
-      <a class="icon share">分享</a>
-      <a class="icon1 weibo js-share" title="分享"data-type="weibo" href="javascript:;"></a>
+      <div class="icon-wrap">
+        <div class="side side-front">
+          <a class="icon share"></a>
+        </div>
+        <div class="side side-back">
+          <a class="icon">分享</a>
+        </div>
+      </div>
+      <a class="icon1 weibo js-share" data-type="weibo" href="javascript:;"></a>
       <a class="icon1 wechat" href="javascript:;">
-        <img class="qr" src="img/wechat.png">
-      </a>
+        <img class="qr" src="img/wechat.png"></a>
       <a class="icon1 twitter js-share" data-type="twitter" href="javascript:;"></a>
     </div>
-    <a class="icon loading" title="下载客户端" href="javascript:;">
-      <img class="qr" src="img/loading.jpg">
-    </a>
-    <a class="icon booking" title="订阅公众号" href="javascript:;">
-      <img class="qr" src="img/booking.jpg">
-    </a>
-    <div class="icon to-top js-toTop" title="回到顶部"></div>
-  </div> 
+    <div class="loadings">
+      <div class="icon-wrap">
+        <div class="side side-front">
+          <a class="icon loading" href="javascript:;"></a>
+        </div>
+        <div class="side side-back">
+          <a class="icon">
+            ios
+            <br/>
+            下载
+          </a>
+        </div>
+      </div>
+      <img class="qr" src="img/loading.jpg"></div>
+    <div class="bookings">
+      <div class="icon-wrap">
+        <div class="side side-front">
+          <a class="icon booking" href="javascript:;"></a>
+        </div>
+        <div class="side side-back">
+          <a class="icon">
+            关注
+            <br/>
+            公众号
+          </a>
+        </div>
+      </div>
+      <img class="qr" src="img/booking.jpg"></div>
+    <div class="icon to-top js-toTop"></div>
+  </div>
 </body>
 </html>
 <script src="js/jquery-1.8.3.min.js"></script>
@@ -44,5 +72,12 @@ $(function(){
   $('.js-toTop').click(function(){
     $('html,body').animate({ scrollTop: 0 }, 500);
   })
+})
+$(".icon-wrap").hover(function(){
+  $(this).find(".side-front").hide();
+  $(this).find(".side-back").show();
+},function(){
+  $(this).find(".side-front").show();
+  $(this).find(".side-back").hide();
 })
 </script>
